# flecs-test-runner

./: .gitignore  CMakeLists.txt  README.md  TEST_BUILDER_README.md  TODO.md  TODO.txt  build.ps1  test_example.json  test_single.json  vcpkg.json
.github/workflows/: ci.yml
flecs-cpp/: CMakeLists.txt  CMakePresets.json  vcpkg.json
flecs-cpp/src/: CMakeLists.txt  main.cpp  movement_module.cpp  movement_module.h  testing_module.cpp  testing_module.h
flecs-cpp/src/core/: CMakeLists.txt  main.cpp
flecs-cpp/src/shared/: CMakeLists.txt
flecs-cpp/src/shared/modules/: time.cpp
flecs-cpp/src/shared/modules/include/modules/: movement.h
flecs-cpp/src/test_runner/: CMakeLists.txt  test_runner.cpp
flecs-cpp/src/test_runner/include/test_runner/: test_runner.h
flecs-cpp/src/tests/: CMakeLists.txt  movement_module_test.cpp
flecs-cpp/src/utils/: reflection.cpp  reflection.h
flecs-cpp/tests/: CMakeLists.txt  movement_module_test.cpp
flecs-gui/: eslint.config.js  index.html  package-lock.json  package.json
flecs-gui/src/: App.tsx  flecs.js  styles.ts
flecs-gui/src/common/: constants.ts
flecs-gui/src/components/landingPage/: landingPage.tsx
flecs-gui/src/components/resultsPage/: resultsPage.tsx  styles.ts
flecs-gui/src/components/uploader/: uploader.tsx
flecs-gui/src/context/flecsConnection/: flecsConnectionProvider.tsx
script/: request.py
src/: CMakeLists.txt
src/core/: CMakeLists.txt  common.h  reflection.h  test_runner.cpp  test_runner_impl.cpp  test_runner_impl.h
src/core/include/test_runner/: common.h  test_runner.h
src/test/: CMakeLists.txt  common.h  compare_property_test.cpp  component_metadata_test.cpp  movement_module_test.cpp  run_unit_test.cpp  test_runner_test.cpp
src/tests/: CMakeLists.txt  movement_module_test.cpp
test_json/: test_multiple.json
